--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:1.19.0-alpine
 
-RUN rm /etc/nginx-prod/conf.d/default.conf
-COPY nginx.conf /etc/nginx-prod/conf.d
+RUN rm /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d
