--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,4 +1,4 @@
-upstream web {
+upstream fast {
         server fast_api:8888;
 }
 
@@ -14,6 +14,6 @@ server {
         ssl_certificate_key ssl/s.key;
 
         location / {
-                proxy_pass http://web;
+                proxy_pass http://fast;
         }
 }
